Desktop: prices: стилизация / Desktop: feedback

--- a/source/index.html
+++ b/source/index.html
@@ -80,7 +80,7 @@
               <div class="slider__info">
                 <h2 class="slider__title">Греция</h2>
                 <p class="slider__text">На севере Греции находится один из крупнейших комплексов монастырей, расположенных на вершинах скал. Название его «Метеора» буквально переводится как «висящие в воздухе». Этот монастырь основная цель нашего путешествия в Греции. После покарения скал из песчанника и обломочной горной породы, достигающих в высоту 600 метров, наградой будет неописуемая красота природы и атмосфера, царящая в монастырях Метеоры.</p>
-                <button class="slider__button">Купить тур сейчас</button>
+                <button class="slider__button button">Купить тур сейчас</button>
               </div>
               <img class="slider__img" src="img/desktop-slider-greece.png" width="430" height="596" alt="Греция">
               <div class="slider__block review">
@@ -108,7 +108,7 @@
               <li class="service-list__item">Завтраки, ужины в отелях и ланчи на природе</li>
               <li class="service-list__item">Экскурсии по удивительно красивым местам Европы</li>
             </ul>
-            <button class="service-list__button">купить тур сейчас</button>
+            <button class="service-list__button button">Купить тур сейчас</button>
           </section>
           <section class="prices__description service-list">
             <h3 class="service-list__title">Экономный</h3>
@@ -121,18 +121,26 @@
               <li class="service-list__item">Только завтраки в отелях</li>
               <li class="service-list__item">Экскурсии по удивительно красивым местам Европы</li>
             </ul>
-            <button class="service-list__button">купить тур сейчас</button>
+            <button class="service-list__button button">Купить тур сейчас</button>
           </section>
         </section>
-
-
-
+        <section class="feedback">
+          <img class="feedback__img" src="">
+          <div class="feedback__block">
+            <h3 class="feedback__title">У Вас остались вопросы?</h3>
+            <p class="feedback__text">Оставьте свой номер или e-mail и мы свяжемся с Вами</p>
+            <form class="feedback__form" method="get">
+              <input class="feedback__input" type="text" name="tel" placeholder="Введите 10 цифр номера" required>
+              <input class="feedback__input" type="text" name="email" placeholder="E-mail">
+              <button class="feedback__button button" type="submit">Отправить</button>
+            </p>
+            </form>
+          </div>
+        </section>
       </div>
     </main>
+    <footer class="page-footer">
 
-
-
-
-
+    </footer>
   </body>
 </html>
